fix(agri): on homepage, bg image was hidden by alert banner

--- a/apps/agri/static/agri/home.css
+++ b/apps/agri/static/agri/home.css
@@ -1,4 +1,4 @@
-body {
+#content {
   background-image: url("images/home/background.webp");
   background-repeat: no-repeat;
   background-position-y: -250px;
